--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"react-dom": "16.12.0",
 		"react-scripts": "3.0.1",
 		"react-scroll": "^1.7.16",
+		"react-slick": "^0.25.2",
+		"slick-carousel": "1.8.1",
 		"styled-components": "5.1.0"
 	},
 	"devDependencies": {
