--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lodash": "4.17.15",
 		"react": "16.12.0",
 		"react-dom": "16.12.0",
+		"react-responsive-modal": "^5.0.2",
 		"react-scripts": "3.0.1",
 		"react-scroll": "^1.7.16",
 		"react-slick": "^0.25.2",
